--- a/app/src/main/res/layout/activity_live_data.xml
+++ b/app/src/main/res/layout/activity_live_data.xml
@@ -11,18 +11,32 @@
         android:id="@+id/classification_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Example classification label"
+        android:text="Classifying activity..."
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:lines="2"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/center_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/sitting_standing"
+        android:contentDescription="Image between label and graphs"
+        app:layout_constraintTop_toBottomOf="@id/classification_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/respeck_graphs"
-        app:layout_constraintTop_toBottomOf="@id/classification_label"
+        app:layout_constraintTop_toBottomOf="@id/center_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/thingy_graphs">
