--- a/app/src/main/res/layout/activity_live_data.xml
+++ b/app/src/main/res/layout/activity_live_data.xml
@@ -1,89 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".live.LiveDataActivity">
 
-    <!-- Added TextView at the top -->
-    <TextView
-        android:id="@+id/classification_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Classifying activity..."
-        android:textSize="28sp"
-        android:textStyle="bold"
-        android:lines="2"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Social Signal Label (added below Classification Label) -->
-    <TextView
-        android:id="@+id/social_signal_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Social Signal: "
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/classification_label"
-        app:layout_constraintStart_toStartOf="@id/classification_label"
-        app:layout_constraintEnd_toEndOf="@id/classification_label" />
-
-    <ImageView
-        android:id="@+id/center_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/sitting_standing"
-        android:contentDescription="Image between label and graphs"
-        app:layout_constraintTop_toBottomOf="@id/social_signal_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
-
-    <LinearLayout
+    <!-- Container for scrolling content -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/respeck_graphs"
-        app:layout_constraintTop_toBottomOf="@id/center_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/thingy_graphs">
+        android:layout_height="wrap_content">
 
+        <!-- Added TextView at the top -->
         <TextView
+            android:id="@+id/classification_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Respeck Live Data" />
+            android:text="Classifying activity..."
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:lines="2"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/social_signal_label"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/respeck_chart"
-            android:layout_width="match_parent"
-            android:layout_height="200dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/respeck_graphs"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/thingy_graphs"
-        android:orientation="vertical">
-
+        <!-- Social Signal Label -->
         <TextView
+            android:id="@+id/social_signal_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Thingy Live Data" />
+            android:text="Social Signal: Classifying activity..."
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:lines="2"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            app:layout_constraintTop_toBottomOf="@id/classification_label"
+            app:layout_constraintBottom_toTopOf="@id/center_image"
+            app:layout_constraintStart_toStartOf="@id/classification_label"
+            app:layout_constraintEnd_toEndOf="@id/classification_label" />
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/thingy_chart"
+        <ImageView
+            android:id="@+id/center_image"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/sitting_standing"
+            android:contentDescription="Image between label and graphs"
+            app:layout_constraintTop_toBottomOf="@id/social_signal_label"
+            app:layout_constraintBottom_toTopOf="@id/respeck_graphs"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/respeck_graphs"
+            app:layout_constraintTop_toBottomOf="@id/center_image"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/thingy_graphs">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Respeck Live Data" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/respeck_chart"
+                android:layout_width="match_parent"
+                android:layout_height="200dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/respeck_graphs"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/thingy_graphs"
+            android:orientation="vertical"
+            android:layout_marginTop="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thingy Live Data" />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/thingy_chart"
+                android:layout_width="match_parent"
+                android:layout_height="200dp" />
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
