--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -4,12 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- TextView to display today's date -->
+    <TextView
+        android:id="@+id/date_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text="Today"
+        android:textSize="26sp"
+        android:textStyle="bold" />
+
     <!-- Optionally, you can add a button to change the date -->
     <Button
         android:id="@+id/change_date_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change Date" />
+        android:layout_gravity="center"
+        android:text="Change Date"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#0000FF"
+        android:padding="10dp"
+        android:textSize="16sp" />
 
     <ListView
         android:id="@+id/activity_summary_list_view"
